--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -56,7 +56,7 @@ Which of these statements is true?
 
 哪些描述是正确的？
 - [ ]Python 代码必须始终编译
-- [ ]CPython 是一个 Python 的实现方式
+- [x]CPython 是一个 Python 的实现方式
 - [ ]Python 1.7 是最广泛使用的版本
 
 小编注：
