--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -1,7 +1,7 @@
 Welcome to Python!
 欢迎来到 Python！
  
-Python is a high-level programming language, with applications in numerous areas, including web programming, scripting, scientific computing, and artificial intelligence.
+Python is a high-level programming language, with applications in numerous areas, including web programming, scripting, scientific computing, and artificial intelligence.  <br>
 Python是一种高级编程语言，在许多领域有应用，包括网页编程、脚本编写、科学计算和人工智能等领域。 
 
 It is very popular and used by organizations such as Google, NASA, the CIA, and Disney.
