--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -4,10 +4,10 @@ Welcome to Python!
 Python is a high-level programming language, with applications in numerous areas, including web programming, scripting, scientific computing, and artificial intelligence.  <br>
 Python是一种高级编程语言，在许多领域有应用，包括网页编程、脚本编写、科学计算和人工智能等领域。 
 
-It is very popular and used by organizations such as Google, NASA, the CIA, and Disney.
+It is very popular and used by organizations such as Google, NASA, the CIA, and Disney.  <br>
 这在谷歌、NASA、美国航空航天局、美国中央情报局和迪士尼等公司/组织中非常受欢迎并得到大量的使用。
 
->Python is processed at runtime by the interpreter. There is no need to compile your program before executing it.
+>Python is processed at runtime by the interpreter. There is no need to compile your program before executing it.<br>
 >Python在运行时通过解释器进行处理。在执行python程序之前不需要编译。
 
 作业：
