--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -12,10 +12,10 @@ It is very popular and used by organizations such as Google, NASA, the CIA, and 
 
 作业：
 
-Python is a:
-set of editing tools
-Development environment
-Programming language
+Python is a:<br>
+set of editing tools<br>
+Development environment<br>
+Programming language  <br>
 
 Python 是：
 编辑器
