--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -1,5 +1,4 @@
-Welcome to Python!
-欢迎来到 Python！
+## 欢迎来到 Python！
  
 Python is a high-level programming language, with applications in numerous areas, including web programming, scripting, scientific computing, and artificial intelligence.  <br>
 Python是一种高级编程语言，在许多领域有应用，包括网页编程、脚本编写、科学计算和人工智能等领域。 
@@ -11,7 +10,7 @@ It is very popular and used by organizations such as Google, NASA, the CIA, and 
 
 >Python在运行时通过解释器进行处理。在执行python程序之前不需要编译。
 
-作业：
+### 作业
 
 Python is a:<br>
 set of editing tools<br>
@@ -25,7 +24,6 @@ Python 是：<br>
 
 
 ## Welcome to Python!
-## 欢迎来到Python！
 
 The three major versions of Python are 1.x, 2.x and 3.x. These are subdivided into minor versions, such as 2.7 and 3.3.<br>
 Python有三个主要版本，分别是1.x、2.x 和3.x。它们被细分为较小的版本，如2.3、3.3等。
@@ -48,7 +46,7 @@ The version used in this course, CPython, is the most popular by far.<br>
 
 >解释器是运行以解释语言（如 Python）编写的脚步的程序。
 
-问题：
+### 习题
 
 Which of these statements is true?
 - [ ] Python code must be always compiled
@@ -60,5 +58,5 @@ Which of these statements is true?
 - [x] CPython 是一个 Python 的实现方式
 - [ ] Python 1.7 是最广泛使用的版本
 
-小编注：
-Python实际上是一门语言规范，只是定义了Python这门语言应该具备哪些语言要素，应当能完成什么样的任务。这种语言规范可以用不同的方式实现，可以用C实现，也可以用C++、Java、C#、JavaScript，甚至使用Python自己实现。
+>小编注：
+>Python实际上是一门语言规范，只是定义了Python这门语言应该具备哪些语言要素，应当能完成什么样的任务。这种语言规范可以用不同的方式实现，可以用C实现，也可以用C++、Java、C#、JavaScript，甚至使用Python自己实现。
