--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -57,5 +57,5 @@ Which of these statements is true?
 - [x] CPython 是一个 Python 的实现方式
 - [ ] Python 1.7 是最广泛使用的版本
 
->小编注：
->Python实际上是一门语言规范，只是定义了Python这门语言应该具备哪些语言要素，应当能完成什么样的任务。这种语言规范可以用不同的方式实现，可以用C实现，也可以用C++、Java、C#、JavaScript，甚至使用Python自己实现。
+>小编注：<br>
+Python实际上是一门语言规范，只是定义了Python这门语言应该具备哪些语言要素，应当能完成什么样的任务。这种语言规范可以用不同的方式实现，可以用C实现，也可以用C++、Java、C#、JavaScript，甚至使用Python自己实现。
