--- a/module1.basic-concepts/1.1what-is-python.md
+++ b/module1.basic-concepts/1.1what-is-python.md
@@ -41,9 +41,8 @@ Python 有很多种用于各种语言编写的实现方式。
 The version used in this course, CPython, is the most popular by far.<br>
 本课程使用的版本是目前最受欢迎的 CPython。
 
->An interpreter is a program that runs scripts written in an interpreted language such as Python.
-
->解释器是运行以解释语言（如 Python）编写的脚步的程序。
+>An interpreter is a program that runs scripts written in an interpreted language such as Python.<br>
+解释器是运行以解释语言（如 Python）编写的脚步的程序。
 
 ### 习题
 
