--- a/module2.Control Structures控制结构/2.5Operator-Precedence运算符优先级.md
+++ b/module2.Control Structures控制结构/2.5Operator-Precedence运算符优先级.md
@@ -6,7 +6,7 @@
 It is an extension of the mathematical idea of order of operations (multiplication being performed before addition, etc.) to include other operators, such as those in Boolean logic. <br>
 它是操作顺序（加法之前需执行乘法等）的数学思想的扩展，包括其它运算符，例如布尔逻辑中的运算符。
 
-The below code shows that == has a higher precedence than or:
+The below code shows that == has a higher precedence than or:<br>
 以下代码显示， **==** 运算符的优先级高于 **or** ： 
 
 ## 运算符优先级
